--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "tailwindcss": "^4",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
