--- a/package.json
+++ b/package.json
@@ -17,38 +17,38 @@
     "@aws-amplify/ui-react": "^6.11.2",
     "@aws-sdk/client-dynamodb": "^3.716.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
-    "@mui/material-nextjs": "^7.1.0",
-    "@pinecone-database/pinecone": "^6.0.1",
-    "@types/uuid": "^10.0.0",
-    "aws-amplify": "^6.15.0",
-    "axios": "^1.9.0",
-    "next": "15.3.2",
-    "openai": "^4.103.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
+    "@mui/material-nextjs": "^5.15.2",
+    "@pinecone-database/pinecone": "^1.1.2",
+    "@types/uuid": "^9.0.7",
+    "aws-amplify": "^6.0.10",
+    "axios": "^1.6.2",
+    "next": "14.0.4",
+    "openai": "^4.20.1",
     "pinecone-client": "^2.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/aws-lambda": "^8.10.149",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "@eslint/eslintrc": "^2.1.4",
+    "@tailwindcss/postcss": "^3.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/aws-lambda": "^8.10.130",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "tailwindcss": "^4",
-    "typescript": "^5.8.3"
+    "jest-environment-jsdom": "^29.7.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
