Enhanced build configuration with debugging tools

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,15 +3,20 @@ frontend:
   phases:
     preBuild:
       commands:
+        - echo "Starting build process at $(date)"
         - echo "Node version $(node -v)"
         - echo "NPM version $(npm -v)"
-        - npm ci --legacy-peer-deps
-        - echo "Finished installing dependencies"
+        - echo "Directory contents:" && ls -la
+        - echo "Installing only production dependencies to reduce build time"
+        - npm ci --legacy-peer-deps --production=false --no-optional
+        - echo "Finished installing dependencies at $(date)"
     build:
       commands:
-        - echo "Starting build"
-        - npm run build
-        - echo "Build completed"
+        - echo "Starting build at $(date)"
+        - echo "Package.json contents:" && cat package.json
+        - echo "Checking if next.config.js exists:" && ls -la next.config.js
+        - NODE_OPTIONS="--max-old-space-size=4096" npm run build
+        - echo "Build completed at $(date)"
   artifacts:
     baseDirectory: .next
     files:
@@ -22,4 +27,7 @@ frontend:
       - .next/cache/**/*
 
 # Note: Environment variables should be configured in the Amplify Console
-# This is just a reminder of which variables are needed
+# This is just a reminder of which variables are needed:
+# - OPENAI_API_KEY
+# - PINECONE_API_KEY
+# - PINECONE_INDEX_NAME
