Fix: Directory name issue and Pinecone SDK configuration - Moved project from 'Altercall Assessment' to 'Altercall-Assessment' (removed space) - Fixed Pinecone SDK v1.1.2 configuration issues with TypeScript casting - Updated tsconfig.json with @ alias path mapping - Fixed import issues in backend.ts for Amplify Auth and Data - Updated Lambda functions with proper Pinecone initialization

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@aws-sdk/util-dynamodb": "^3.716.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@langchain/community": "^0.3.45",
+    "@langchain/core": "^0.3.57",
+    "@langchain/langgraph": "^0.2.74",
+    "@langchain/openai": "^0.5.11",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@mui/material-nextjs": "^5.15.2",
