--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pinecone-database/pinecone": "^2.2.2",
     "@types/uuid": "^9.0.7",
     "aws-amplify": "^6.0.10",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.6.2",
     "next": "14.0.4",
     "openai": "^4.20.1",
