--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/cli": "^13.0.1",
     "@aws-amplify/ui-react": "^6.11.2",
-    "@aws-sdk/client-dynamodb": "^3.716.0",
+    "@aws-sdk/client-appsync": "^3.823.0",
+    "@aws-sdk/client-dynamodb": "^3.823.0",
+    "@aws-sdk/lib-dynamodb": "^3.823.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
